Update AdminLogin and LandingPage components

--- a/frontend/src/pages/LandingPage/LandingPage.css
+++ b/frontend/src/pages/LandingPage/LandingPage.css
@@ -1,4 +1,4 @@
-body {
+.bg {
   background-image: url("../../assets/landingimage.jpg");
   background-size: cover;
   /* background-position: center; */
