--- a/frontend/src/components/AdminNavbar/AdminNavbar.css
+++ b/frontend/src/components/AdminNavbar/AdminNavbar.css
@@ -22,7 +22,7 @@
   font-size: 18px;
 }
 
-.nav-link:hover {
+.sidenavlink:hover {
   background-color: #f8f9fa;
   border-radius: 4px;
   color: black;
