--- a/frontend/src/pages/LandingPage/LandingPage.css
+++ b/frontend/src/pages/LandingPage/LandingPage.css
@@ -1,8 +1,42 @@
 .bg {
-  background-image: url("../../assets/landingimage.jpg");
+  background-image: url("../../assets/new2.jpg");
   background-size: cover;
   /* background-position: center; */
   background-repeat: no-repeat;
   height: 114vh;
   margin: 0;
+}
+
+/* LandingPage.css */
+@keyframes bottomToTop {
+  from {
+    opacity: 0;
+    transform: translateY(100%);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.line-1,
+.line-2,
+.line-3 {
+  opacity: 0;
+  animation-fill-mode: forwards;
+}
+
+.line-1 {
+  animation: bottomToTop 1s ease-in-out forwards;
+  animation-delay: 0.5s;
+}
+
+.line-2 {
+  animation: bottomToTop 1s ease-in-out forwards;
+  animation-delay: 1.5s;
+}
+
+.line-3 {
+  animation: bottomToTop 1s ease-in-out forwards;
+  animation-delay: 2.5s;
 }
